# groupy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: parse_gendf.ipynb  versions.md
src/groupy/: __init__.py  grouped.py  njoy.py  parse.py
src/groupy/base/: _energy_class.py  _njoy_modules.py  _outgoing_class.py  _pointwise_class.py  _scattering_mat_class.py
src/groupy/cmd/: run_grouping.py
tests/: energy_tests.py  groupr_tests.py  njoy_tests.py  outgoing_tests.py  pointwise_tests.py  read_groups_tests.py  scat_mat_tests.py
tests/files/: U238_356  input_u238_356  one_group
